--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,27 @@
+anyio==3.5.0
 asgiref==3.5.0
+asyncio==3.4.3
 autopep8==1.6.0
 backports.zoneinfo==0.2.1
 certifi==2021.10.8
 charset-normalizer==2.0.12
+click==8.1.3
 Django==4.0.4
 django-crispy-forms==1.14.0
+h11==0.12.0
+httpcore==0.14.7
+httpx==0.22.0
 idna==3.3
 Pillow==9.1.0
 pycodestyle==2.8.0
+python-dateutil==2.8.2
 python-dotenv==0.20.0
 requests==2.27.1
+rfc3986==1.5.0
+six==1.16.0
+sniffio==1.2.0
 sqlparse==0.4.2
 toml==0.10.2
 urllib3==1.26.9
+uvicorn==0.17.6
+whitenoise==6.1.0
