--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,33 @@
 anyio==3.5.0
 asgiref==3.5.0
+asttokens==2.0.5
 asyncio==3.4.3
 autopep8==1.6.0
+backcall==0.2.0
 backports.zoneinfo==0.2.1
 certifi==2021.10.8
 charset-normalizer==2.0.12
 click==8.1.3
+decorator==5.1.1
 Django==4.0.4
 django-crispy-forms==1.14.0
+executing==0.8.3
 h11==0.12.0
 httpcore==0.14.7
 httpx==0.22.0
 idna==3.3
+ipython==8.3.0
+jedi==0.18.1
+matplotlib-inline==0.1.3
+parso==0.8.3
+pexpect==4.8.0
+pickleshare==0.7.5
 Pillow==9.1.0
+prompt-toolkit==3.0.29
+ptyprocess==0.7.0
+pure-eval==0.2.2
 pycodestyle==2.8.0
+Pygments==2.12.0
 python-dateutil==2.8.2
 python-dotenv==0.20.0
 requests==2.27.1
@@ -21,7 +35,10 @@ rfc3986==1.5.0
 six==1.16.0
 sniffio==1.2.0
 sqlparse==0.4.2
+stack-data==0.2.0
 toml==0.10.2
+traitlets==5.2.0
 urllib3==1.26.9
 uvicorn==0.17.6
+wcwidth==0.2.5
 whitenoise==6.1.0
