--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ click==8.1.3
 decorator==5.1.1
 Django==4.0.4
 django-crispy-forms==1.14.0
+django-debug-toolbar==3.4.0
 executing==0.8.3
 h11==0.12.0
 httpcore==0.14.7
