--- a/requirements.txt
+++ b/requirements.txt
@@ -12,13 +12,17 @@ decorator==5.1.1
 Django==4.0.4
 django-crispy-forms==1.14.0
 django-debug-toolbar==3.4.0
+django-filter==22.1
+djangorestframework==3.13.1
 executing==0.8.3
 h11==0.12.0
 httpcore==0.14.7
 httpx==0.22.0
 idna==3.3
+importlib-metadata==4.12.0
 ipython==8.3.0
 jedi==0.18.1
+Markdown==3.3.7
 matplotlib-inline==0.1.3
 parso==0.8.3
 pexpect==4.8.0
@@ -31,6 +35,7 @@ pycodestyle==2.8.0
 Pygments==2.12.0
 python-dateutil==2.8.2
 python-dotenv==0.20.0
+pytz==2022.1
 requests==2.27.1
 rfc3986==1.5.0
 six==1.16.0
@@ -43,3 +48,4 @@ urllib3==1.26.9
 uvicorn==0.17.6
 wcwidth==0.2.5
 whitenoise==6.1.0
+zipp==3.8.0
