--- a/requirements.txt
+++ b/requirements.txt
@@ -5,16 +5,19 @@ asyncio==3.4.3
 autopep8==1.6.0
 backcall==0.2.0
 backports.zoneinfo==0.2.1
+black==22.6.0
 certifi==2021.10.8
 charset-normalizer==2.0.12
 click==8.1.3
 decorator==5.1.1
 Django==4.0.4
+django-cors-headers==3.13.0
 django-crispy-forms==1.14.0
 django-debug-toolbar==3.4.0
 django-filter==22.1
 djangorestframework==3.13.1
 executing==0.8.3
+flake8==4.0.1
 h11==0.12.0
 httpcore==0.14.7
 httpx==0.22.0
@@ -24,14 +27,19 @@ ipython==8.3.0
 jedi==0.18.1
 Markdown==3.3.7
 matplotlib-inline==0.1.3
+mccabe==0.6.1
+mypy-extensions==0.4.3
 parso==0.8.3
+pathspec==0.9.0
 pexpect==4.8.0
 pickleshare==0.7.5
 Pillow==9.1.0
+platformdirs==2.5.2
 prompt-toolkit==3.0.29
 ptyprocess==0.7.0
 pure-eval==0.2.2
 pycodestyle==2.8.0
+pyflakes==2.4.0
 Pygments==2.12.0
 python-dateutil==2.8.2
 python-dotenv==0.20.0
@@ -43,7 +51,9 @@ sniffio==1.2.0
 sqlparse==0.4.2
 stack-data==0.2.0
 toml==0.10.2
+tomli==2.0.1
 traitlets==5.2.0
+typing-extensions==4.3.0
 urllib3==1.26.9
 uvicorn==0.17.6
 wcwidth==0.2.5
