--- a/bc_frontend/package.json
+++ b/bc_frontend/package.json
@@ -13,8 +13,10 @@
     "@testing-library/user-event": "^13.5.0",
     "autoprefixer": "10.4.5",
     "bootstrap": "^5.1.3",
+    "chart.js": "^3.8.2",
     "react": "^18.1.0",
     "react-bootstrap": "^2.4.0",
+    "react-chartjs-2": "^4.3.1",
     "react-dom": "^18.1.0",
     "react-icons": "^4.4.0",
     "react-router-dom": "^6.3.0",
