--- a/bc_frontend/package.json
+++ b/bc_frontend/package.json
@@ -14,11 +14,13 @@
     "autoprefixer": "10.4.5",
     "bootstrap": "^5.1.3",
     "chart.js": "^3.8.2",
+    "range-slider-input": "^2.2.1",
     "react": "^18.1.0",
     "react-bootstrap": "^2.4.0",
     "react-chartjs-2": "^4.3.1",
     "react-dom": "^18.1.0",
     "react-icons": "^4.4.0",
+    "react-range-slider-input": "^2.1.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
