--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ black==22.6.0
 certifi==2021.10.8
 charset-normalizer==2.0.12
 click==8.1.3
+cycler==0.11.0
 decorator==5.1.1
 Django==4.0.4
 django-cors-headers==3.13.0
@@ -18,6 +19,7 @@ django-filter==22.1
 djangorestframework==3.13.1
 executing==0.8.3
 flake8==4.0.1
+fonttools==4.34.4
 h11==0.12.0
 httpcore==0.14.7
 httpx==0.22.0
@@ -25,10 +27,13 @@ idna==3.3
 importlib-metadata==4.12.0
 ipython==8.3.0
 jedi==0.18.1
+kiwisolver==1.4.4
 Markdown==3.3.7
 matplotlib-inline==0.1.3
 mccabe==0.6.1
 mypy-extensions==0.4.3
+numpy==1.23.1
+packaging==21.3
 parso==0.8.3
 pathspec==0.9.0
 pexpect==4.8.0
@@ -41,6 +46,7 @@ pure-eval==0.2.2
 pycodestyle==2.8.0
 pyflakes==2.4.0
 Pygments==2.12.0
+pyparsing==3.0.9
 python-dateutil==2.8.2
 python-dotenv==0.20.0
 pytz==2022.1
