--- a/requirements.txt
+++ b/requirements.txt
@@ -41,6 +41,7 @@ pickleshare==0.7.5
 Pillow==9.1.0
 platformdirs==2.5.2
 prompt-toolkit==3.0.29
+psycopg2==2.9.3
 ptyprocess==0.7.0
 pure-eval==0.2.2
 pycodestyle==2.8.0
