--- a/requirements.txt
+++ b/requirements.txt
@@ -53,6 +53,7 @@ python-dotenv==0.20.0
 pytz==2022.1
 requests==2.27.1
 rfc3986==1.5.0
+rollbar==0.16.3
 six==1.16.0
 sniffio==1.2.0
 sqlparse==0.4.2
