--- a/bc_frontend/package.json
+++ b/bc_frontend/package.json
@@ -12,11 +12,12 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "autoprefixer": "10.4.5",
-    "bootstrap": "^5.1.3",
+    "bootstrap": "^5.2.2",
     "chart.js": "^3.8.2",
+    "mdb-ui-kit": "^5.0.0",
     "range-slider-input": "^2.2.1",
     "react": "^18.1.0",
-    "react-bootstrap": "^2.4.0",
+    "react-bootstrap": "^2.5.0",
     "react-chartjs-2": "^4.3.1",
     "react-dom": "^18.1.0",
     "react-icons": "^4.4.0",
