Add database backend flexibility
It now depends on environment variables to determine which database
backend to use.

This allows devs to pick either sqlite or postgresql and remain in
ROLE="DEV" mode.

--- a/.env.template
+++ b/.env.template
@@ -7,6 +7,7 @@ STATIC_ROOT = "../static/"
 MEDIA_URL = "media/"
 PG_PASSWORD = "your-password-here"
 PG_PROD_USER = "your-pgsql-username if you use pgsql"
+DJANGO_DB = "sqlite" # or "postgres" if you use pgsql
 
 
 BRAWLSTARS_API_KEY = "Brawlstars#api#key"
