--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ black==22.6.0
 certifi==2021.10.8
 charset-normalizer==2.0.12
 click==8.1.3
+coverage==6.5.0
 cycler==0.11.0
 decorator==5.1.1
 Django==4.0.8
