--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,7 @@ djangorestframework==3.13.1
 executing==0.8.3
 flake8==4.0.1
 fonttools==4.34.4
+freezegun==1.2.2
 h11==0.12.0
 httpcore==0.14.7
 httpx==0.22.0
