--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ anyio==3.5.0
 asgiref==3.5.0
 asttokens==2.0.5
 asyncio==3.4.3
+async-timeout==4.0.2
 autopep8==1.6.0
 backcall==0.2.0
 backports.zoneinfo==0.2.1
@@ -17,12 +18,14 @@ django-cors-headers==3.13.0
 django-crispy-forms==1.14.0
 django-debug-toolbar==3.4.0
 django-filter==22.1
+django-redis==5.2.0
 djangorestframework==3.13.1
 executing==0.8.3
 flake8==4.0.1
 fonttools==4.34.4
 freezegun==1.2.2
 h11==0.12.0
+hiredis==2.0.0
 httpcore==0.14.7
 httpx==0.22.0
 idna==3.3
@@ -53,6 +56,7 @@ pyparsing==3.0.9
 python-dateutil==2.8.2
 python-dotenv==0.20.0
 pytz==2022.1
+redis==4.3.5
 requests==2.27.1
 rfc3986==1.5.0
 rollbar==0.16.3
