--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ click==8.1.3
 coverage==6.5.0
 cycler==0.11.0
 decorator==5.1.1
+Deprecated==1.2.13
 Django==4.0.8
 django-cors-headers==3.13.0
 django-crispy-forms==1.14.0
@@ -26,7 +27,7 @@ fonttools==4.34.4
 freezegun==1.2.2
 h11==0.12.0
 hiredis==2.0.0
-httpcore==0.14.7
+httpcore==0.15.0
 httpx==0.23.0
 idna==3.3
 importlib-metadata==4.12.0
@@ -72,4 +73,5 @@ urllib3==1.26.9
 uvicorn==0.17.6
 wcwidth==0.2.5
 whitenoise==6.1.0
+wrapt==1.14.1
 zipp==3.8.0
